Fixed issue with code not wrapping.
Fixed an issue regarding word-wrap no longer warpping because of the
space replacement.

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body {
     height: 100%;
     padding-left: 10px;
     overflow-y: scroll;
-    word-wrap: normal;
+    word-wrap: break-word;
     color: white;
     font-size: 20pt;
     filter: blur(2px);
